nginx-canary-trafficRouting-istio-subset/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs
spec:
  hosts:
  - "*"
  gateways:
  - dev-istio-gateway-canary-istio-subset
  http:
    - name: primary
      route:
        - destination:
            host: dev-nginx-stable-canary-istio-subset
            subset: stable  # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
          weight: 100
        - destination:
            host: dev-nginx-stable-canary-istio-subset
            subset: canary  # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
          weight: 0
